--- a/src/App.css
+++ b/src/App.css
@@ -3,35 +3,61 @@
 
 /* === VARIABLE CSS === */
 
+:root {
+  --header-height: 3rem;
 
-.App {
-  text-align: center;
+  /* === COLORS === */
+  --hue: 0;
+  --sat: 0%;
+  --title-color: hsl(var(--hue), var(--sat), 20%);
+  --title-color-dark: hsl(var(--hue), var(--sat), 0%);
+  --text-color: hsl(var(--hue), var(--sat), 46%);
+  --body-color: hsl(var(--hue), var(--sat), 98%);
+  --container-color: #fff;
+
+  /* === font and typography === */
+  --body-font: "Poppins", sans-serif;
+
+  --big-font-size: 3.5rem;
+  --h1-font-size: 2.25rem;
+  --h2-font-size: 1.5rem;
+  --h3-font-size: 1.25rem;
+  --normal-font-size: 1rem;
+  --small-font-size: 0.875rem;
+  --smaller-font-size: 0.813rem;
+  --tiny-font-size: 0.625rem;
+
+  /* === font weight === */
+  --font-normal: 400;
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
+  /* === mergenes bottom === */
+  --mb-0-25: 0.25rem;
+  --mb-0-5: 0.5rem;
+  --mb-0-75: 0.75rem;
+  --mb-1: 1rem;
+  --mb-1-5: 1.5rem;
+  --mb-2: 2rem;
+  --mb-2-5: 2.5rem;
+  --mb-3: 3rem;
+
+  /* === z index === */
+  --z-tooltip: 10;
+  --z-fixed: 100;
+  --z-modal: 1000;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* === responsive typography === */
+@media screen and (max-widht: 992px){
+  :root {
+    ---big-font-size: 2.75rem;
+    --h1-font-size: 1.5rem;
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1rem;
+    --normal-font-size:0.938rem;
+    --small-font-size: 0.813rem;
+    --smaller-font-size: 0.75rem;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 /* === BASE === */
@@ -45,9 +71,9 @@ html {
   scroll-behavior: smooth;
 }
 
-body,
-button,
-input,
+body, 
+button, 
+input, 
 textarea {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
@@ -58,7 +84,9 @@ body{
   color: var(--text-color);
 }
 
-h1, h2, h3 {
+h1, 
+h2, 
+h3 {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
@@ -98,12 +126,13 @@ img {
   margin-bottom: 4rem;
 }
 
-.section__title, .section__subtitle {
+.section__title, 
+.section__subtitle {
   text-align: center;
 }
 
 /* === LAYOULT === */
-.contaier {
+.container {
   max-width: 968px;
   margin-left: auto;
   margin-right: auto;
@@ -136,7 +165,46 @@ img {
   display: inline-flex;
   align-items: center;
 }
-@keyframes App-logo-spin {
+
+/* for large devices */
+@media screen and (max-width: 992px){
+  .container{
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
+  }
+}
+
+/* for medium device */
+@media screen and (max-width: 768px){
+  
+}
+
+@media screen and (max-width: 576px){
+  
+}
+
+@media screen and (max-width: 350px){
+  .container{
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* VER SE USA ISSO AQUI */
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -144,3 +212,34 @@ img {
     transform: rotate(360deg);
   }
 }
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+} */
+
+
+/* .App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+} */
