--- a/src/App.css
+++ b/src/App.css
@@ -166,24 +166,49 @@ img {
   align-items: center;
 }
 
+/* === breakpoints === */
 /* for large devices */
 @media screen and (max-width: 992px){
   .container{
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
   }
+
+  .button {
+    padding: 1rem 1.75rem;
+  }
+
+  .button__icon {
+    width: 22px;
+    height: 22px;
+  }
 }
 
 /* for medium device */
 @media screen and (max-width: 768px){
+  body {
+    margin: 0 0 var(--header-height) 0;
+  }
   
+  .section {
+    padding: 2rem 0 4rem;
+  }
+
+  .section__subtitle {
+    margin-bottom: var(--mb-3);
+  }
 }
 
 @media screen and (max-width: 576px){
   
 }
 
+/* for small device */
 @media screen and (max-width: 350px){
+  :root {
+    --big-font-size: 2.25rem;
+  }
+
   .container{
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
