--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -90,7 +90,7 @@
     margin-left: 9,25rem;
 }
 
-.whell {
+.wheel {
     animation: scroll 2s ease infinite;
 }
 
@@ -101,5 +101,99 @@
     
     30% {
         transform: translateY(3.75rem);
+    }
+}
+
+.home__scroll-name {
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    margin-right: var(--mb-0-25);
+    margin-left: 2px;
+}
+
+.home__scroll-arrow {
+    font-size: 1.25rem;
+    color: var(--title-color);
+}
+
+/* for large devices */
+@media screen and (max-width: 992px){
+    .container{
+      margin-left: var(--mb-1-5);
+      margin-right: var(--mb-1-5);
+    }
+
+    .home__content {
+        grid-template-columns: 100px repeat(2, 1fr);
+        column-gap: 1.25rem;
+    }
+
+    .home_hand {
+        width: 26px;
+        height: 26px;
+    }
+
+    .home__subtitle {
+        padding-left: 3.75rem;
+        margin-bottom: var(--mb-1);
+    }
+
+    .home__subtile::before {
+        width: 42px;
+        top: 0.8rem;
+    }
+
+    .home__description {
+        max-width: initial;
+        margin-bottom: var(--mb-2-5);
+    }
+
+    .home__img {
+        width: 250px;
+        height: 250px;
+        box-shadow: inset 0 0 0 8px rgb(255, 255, 255 / 30%);
+    }
+    
+    .home__scroll {
+        margin-left: 7.5rem;
+    }
+}
+  
+/* for medium device */
+@media screen and (max-width: 768px){
+    .home__content {
+        grid-template-columns: 0.5fr 3fr;
+        padding-top: 3.5rem;
+    }
+
+    .home__img {
+        order: initial;
+        justify-content: initial;
+    }
+
+    .home__data {
+        grid-column: 1/3;
+    }
+
+    .home__img {
+        box-shadow: inset 0 0 0 6px rgb(255, 255, 255 / 30%);
+        width: 200px;
+        height: 200px;
+    }
+
+    .home__scroll {
+        display: none;
+    }
+}
+/* for small device */
+@media screen and (max-width: 350px) {
+    .home__img {
+        width: 180px;
+        height: 180px;
+    }
+
+    .home__hand {
+        width: 22px;
+        height: 22px;
     }
 }
