commit da alteração feita em estudos

--- a/src/components/scrollup/scrollup.css
+++ b/src/components/scrollup/scrollup.css
@@ -1,48 +1,48 @@
 .scrollup {
-    position: fixed;
-    right: 2.5rem;
-    bottom: -20%;
-    bottom: 3rem;
-    background-color: var(--title-color);
-    opacity: 0.8;
-    padding: 0.3rem 0.5rem;
-    border-radius: 0.4rem;
-    z-index: var(--z--tooltip);
-    transition: .5s;
+  position: fixed;
+  right: 2.5rem;
+  bottom: -20%;
+  bottom: 3rem;
+  background-color: var(--title-color);
+  opacity: 0.8;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.4rem;
+  z-index: var(--z--tooltip);
+  transition: 0.5s;
 }
 
 .scrollup__icon {
-    font-size: 1.5rem;
-    color: var(--container-color);
+  font-size: 1.5rem;
+  color: var(--container-color);
 }
 
 .scrollup:hover {
-    background-color: var(--title-color-dark);
+  background-color: var(--title-color-dark);
 }
 
 /* === show sroll === */
 .show-scroll {
-    bottom: 3rem;
+  bottom: 3rem;
 }
 
 /* === breakpoints === */
 /* for large devices */
 @media screen and (max-width: 992px) {
-    .scrollup {
-        right: 1.5rem;
-        padding: 0.25rem 0.4rem;
-    }
+  .scrollup {
+    right: 1.5rem;
+    padding: 0.25rem 0.4rem;
+  }
 
-    .scrollup__icon {
-        font-size: 1.25rem;
-    }
+  .scrollup__icon {
+    font-size: 1.25rem;
+  }
 }
 
 /* for medium device */
 @media screen and (max-width: 768px) {
-    .show-scroll {
-        bottom: 4rem;
-    }
+  .show-scroll {
+    bottom: 4rem;
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -50,7 +50,7 @@
 
 /* for small device */
 @media screen and (max-width: 350px) {
-    .scrollup {
-        right: 1rem;
-    }
+  .scrollup {
+    right: 1rem;
+  }
 }
