--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,57 +1,63 @@
 .header {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: var(--z-fixed);
-    background-color: var(--body-color);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed);
+  background-color: var(--body-color);
 }
 
 .nav {
-    height: calc(var(--header-height) +.15rem);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    column-gap: 1rem;
-    margin-top: 20px;
+  height: calc(var(--header-height) +0.15rem);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 5rem;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .nav__logo,
 .nav__toggle {
-    color: var(--title-color);
-    font-weight: var(--font-medium);
+  color: var(--title-color);
+  font-weight: var(--font-medium);
 }
 
 .nav__list {
-    display: flex;
-    column-gap: 2rem;
+  display: flex;
+  column-gap: 2rem;
 }
 
 .nav__link {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: var(--small-font-size);
-    color: var(--title-color);
-    font-weight: var(--font-medium);
-    transition: .3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: var(--small-font-size);
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  transition: 0.3s;
 }
 
 .nav__icon,
 .nav__close,
 .nav__toggle {
-    display: none;
+  display: none;
 }
 
 /* === active link === */
 .active-link,
 .nav__link:hover {
-    color: var(--title-color-dark);
+  color: var(--title-color-dark);
+}
+
+/* change background header */
+.scroll-header {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* === breackpoints === */
 /* for medium device */
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .header {
     top: initial;
     bottom: 0;
@@ -70,7 +76,7 @@
     padding: 2rem 1.5rem 4rem;
     box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
     border-radius: 1.5rem 1.5rem 0 0;
-    transition: .3s;
+    transition: 0.3s;
   }
 
   /* === show menu === */
@@ -91,7 +97,7 @@
   .nav__close {
     position: absolute;
     right: 1.3rem;
-    bottom: .5rem;
+    bottom: 0.5rem;
     font-size: 1.5rem;
     cursor: pointer;
     color: var(--title-color);
@@ -114,7 +120,7 @@
 }
 
 /* for small device */
-@media screen and (max-width: 350px){
+@media screen and (max-width: 350px) {
   .nav__menu {
     padding: 2rem 0.25rem 4rem;
   }
