--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -55,6 +55,36 @@
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
+/* variables dark theme */
+body.dark-theme {
+  --first-color-second: hsl(var(--hue-color), 30%, 8%),
+  --title-color: hsl(var(--hue-color), 8%, 95%),
+  --text-color: hsl(var(--hue-color), 8%, 75%),
+  --input-color: hsl(var(--hue-color), 29%, 16%),
+  --body-color: hsl(var(--hue-color), 28%, 12%),
+  --container-color: hsl(var(--hue-color), 29%, 16%),
+}
+
+/* button dark/light theme */
+.nav__btns {
+  display: flex;
+  align-items: center;
+}
+
+.change-theme {
+  font-size: 1.25rem;
+  color: var(--title-color);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+
+.change-theme:hover {
+  color: var(--first-color);
+} 
+
+/* dark theme light */
+
+
 /* === breackpoints === */
 /* for medium device */
 @media screen and (max-width: 768px) {
