--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -56,7 +56,7 @@
 }
 
 /* variables dark theme */
-body.dark-theme {
+.dark-theme {
   --first-color-second: hsl(var(--hue-color), 30%, 8%),
   --title-color: hsl(var(--hue-color), 8%, 95%),
   --text-color: hsl(var(--hue-color), 8%, 75%),
