altered scrollUp and color header

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -52,7 +52,8 @@
 
 /* change background header */
 .scroll-header {
-  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+  transition: 0.8s;
+  box-shadow: 0 -1px 6px rgba(0, 0, 0, 0.979);
 }
 
 /* button dark mode */
