--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,28 @@
   }
 }
 
+/* === Barra de Rolagem === */
+/* === Chrome, Edge e Safari === */
+body::-webkit-scrollbar {
+  width: 10px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--body-color);        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--text-color);    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid var(--body-color);  /* creates padding around scroll thumb */
+}
+
+/* === Firefox === */
+body {
+  scrollbar-width: thin;          /* "auto" or "thin" */
+  scrollbar-color: var(--text-color) var(--body-color);   /* scroll thumb and track */
+}
+
 /* === BASE === */
 * {
   margin: 0;
