--- a/src/App.css
+++ b/src/App.css
@@ -63,23 +63,23 @@
 /* === Barra de Rolagem === */
 /* === Chrome, Edge e Safari === */
 body::-webkit-scrollbar {
-  width: 10px;               /* width of the entire scrollbar */
+  width: 10px;
 }
 
 body::-webkit-scrollbar-track {
-  background: var(--body-color);        /* color of the tracking area */
+  background: var(--body-color);
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: var(--text-color);    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 3px solid var(--body-color);  /* creates padding around scroll thumb */
+  background-color: var(--text-color);
+  border-radius: 20px;
+  border: 3px solid var(--body-color);
 }
 
 /* === Firefox === */
 body {
-  scrollbar-width: thin;          /* "auto" or "thin" */
-  scrollbar-color: var(--text-color) var(--body-color);   /* scroll thumb and track */
+  scrollbar-width: thin;
+  scrollbar-color: var(--text-color) var(--body-color);
 }
 
 /* === BASE === */
