add transiion e date in footer

--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -23,10 +23,12 @@
 .qualification__icon {
   font-size: 1.8rem;
   margin-right: var(--mb-0-25);
+  transition: 0.4s;
 }
 
 .qualification__active {
   color: var(--title-color-dark);
+  transition: 0.4s;
 }
 
 .qualification__sections {
