--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -96,6 +96,7 @@
   font-size: var(--small-font-size);
   padding: 0 3.5rem;
   margin-bottom: var(--mb-2);
+  text-align: right;
 }
 
 .services__modal-services {
